[tool.poetry]
name = "temporal-playground"
version = "0.1.0"
description = ""
authors = ["vikyw89 <vikyw89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
temporalio = "^1.4.0"
pytest = "^7.4.3"
pandas = "^2.1.4"
aiohttp = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
